--- a/lab_2/index.html
+++ b/lab_2/index.html
@@ -5,12 +5,13 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="styles/reset.css">
     <link rel="stylesheet" type="text/css" href="styles/rstyles.css">
-    <link rel="stylesheet" href="fonts/css/font-awesome.min.css">
+
     <title>Лабка</title>
+    <link rel="shortcut icon" href="https://upload.wikimedia.org/wikipedia/commons/thumb/d/de/Nulp_logo_ukr.jpg/809px-Nulp_logo_ukr.jpg" type="image/jpg">
+
     <script src="scripts/jquery.min.js" type="text/javascript"></script>
-    <script src="scripts/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
+    <script src="scripts/bootstrap.min.js" type="text/javascript"></script>
     <script src="scripts/default.js" type="text/javascript"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
@@ -23,7 +24,6 @@
 </head>
 
 <body>
-<header>
 
 
     <div class="header_container">
@@ -63,10 +63,10 @@
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link" href="contacts.html">Контакти</a>
+                                <a class="nav-link" href="contactss.html">Контакти</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="admin.html">Адмін</a>
+                                <a class="nav-link" href="Admin.html">Адмін</a>
                             </li>
                     </div>
                 </div>
@@ -161,8 +161,18 @@
 
 <footer>
     <div class="bottom_information">
-        <span>Copyright 2017 . All Rights Reserved.</span>
-
+        <span>Copyright 2017 by Sergiy Borusenko. All Rights Reserved.</span>
+        <div>
+            <ul >
+                <li><a href="index.html">Головна</a></li>
+                <li><a href="newspage.html">Новини</a></li>
+                <li><a href="comments.html">Студентам</a></li>
+                <li><a href="comments.html">Відгуки</a></li>
+                <li><a href="contactss.html">Контаки</a></li>
+                <li><a href="Admin.html">Адмін</a></li>
+            </ul>
+        </div>
     </div>
 </footer>
+</body>
 </html>
