--- a/lab_2/index.html
+++ b/lab_2/index.html
@@ -1,4 +1,5 @@
 <!doctype html>
+<html manifest="manifest.cache">
 <html xmlns="" xmlns="http://www.w3.org/1999/html"> <!--&&&-->
 <head>
     <meta charset="UTF-8">
