--- a/lab_2/programm.html
+++ b/lab_2/programm.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="styles/rstyles.css">
 
-    <title>Відгуки</title>
+    <title>Контакти</title>
     <link rel="shortcut icon" href="https://upload.wikimedia.org/wikipedia/commons/thumb/d/de/Nulp_logo_ukr.jpg/809px-Nulp_logo_ukr.jpg" type="image/jpg">
 
     <script src="scripts/jquery.min.js" type="text/javascript"></script>
@@ -84,45 +84,81 @@
         <div class="clear_both"></div>
     </div>
 
-    <img src="c2.jpg">
-    <div class = container>
-        <div class="row">
-            <div class = col-lg>
-                <p>
-                    <span class="h2 pull-left" style="margin-bottom: 20px;">Ігор Іванків</span></span>
-                    <span><i>11.11.2017, 14:00</i></span>
-                </p>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                </p>
-            </div>
-        </div>
-        <hr>
-        <div class="row">
-            <div class = col-lg>
-                <p>
-                    <span class="h2 pull-left" style="margin-bottom: 20px;">Вася Іванків</span></span>
-                    <span><i>11.11.2017, 14:00</i></span>
-                </p>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                </p>
-            </div>
-        </div>
-        <hr>
-        <div class="row">
-            <div class = "col-lg">
-                <div class="form-group">
-                    <textarea class="form-control" rows="5" id="comment" placeholder = "Новий відгук..."></textarea>
-                </div>
-                <button class="btn btn-primary float-right" type="submit">Відправити</button>
-            </div>
-        </div>
-    </div>
+    <h1 class="text-center col-lg-12">Навчальна програма</h1>
+    <hr>
 
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+    <div class="container">
+
+        <table class="table  ">
+            <thead class="thead-inverse">
+            <tr>
+                <th>#</th>
+                <th>Пара</th>
+                <th>День</th>
+                <th>Викладач</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+                <th scope="row">1</th>
+                <td>Математика</td>
+                <td>Вівторок</td>
+                <td>Павлишин</td>
+            </tr>
+            <tr>
+                <th scope="row">2</th>
+                <td>Анг мова</td>
+                <td>Понеділок</td>
+                <td>Сергієва</td>
+            </tr>
+            <tr>
+                <th scope="row">3</th>
+                <td>Програмування</td>
+                <td>Середа</td>
+                <td>Верес</td>
+            </tr>
+            <tr>
+                <th scope="row">4</th>
+                <td>Фізика</td>
+                <td>Четвер</td>
+                <td>Панчин</td>
+            </tr>
+            <tr>
+                <th scope="row">5</th>
+                <td>Філософія</td>
+                <td>Пятниця</td>
+                <td>Іванюк</td>
+            </tr>
+            <tr>
+                <th scope="row">6</th>
+                <td>Електроніка</td>
+                <td>Понеділок</td>
+                <td>Вітер</td>
+            </tr>
+            <tr>
+                <th scope="row">7</th>
+                <td>Історія</td>
+                <td>Середа</td>
+                <td>Копач</td>
+            </tr>
+            <tr>
+                <th scope="row">8</th>
+                <td>Чисильні методи </td>
+                <td>Четвер</td>
+                <td>Дзелендзяк</td>
+            </tr>
+            <tr>
+                <th scope="row">9</th>
+                <td>Конституція України</td>
+                <td>Пятниця</td>
+                <td>Попович</td>
+            </tr>
+            </tbody>
+        </table>
+
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
 
 
 </body>
