--- a/lab_2/404.html
+++ b/lab_2/404.html
@@ -11,7 +11,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 
-      <title>Розгляд судом справ окремого провадження</title>
+      <title>Суб’єкти господарської діяльності</title>
       <link rel="shortcut icon" href="img/uk.png">
       <link href="css/bootstrap.min.css" rel="stylesheet">
       <link href="css/style.css" rel="stylesheet">
