--- a/lab_2/Admin.html
+++ b/lab_2/Admin.html
@@ -9,18 +9,23 @@
     <link rel="stylesheet" type="text/css" href="styles/rstyles.css">
 
     <title>Admin</title>
-    <link rel="shortcut icon" href="https://upload.wikimedia.org/wikipedia/commons/thumb/d/de/Nulp_logo_ukr.jpg/809px-Nulp_logo_ukr.jpg" type="image/jpg">
-
+    <link rel="shortcut icon"
+          href="https://upload.wikimedia.org/wikipedia/commons/thumb/d/de/Nulp_logo_ukr.jpg/809px-Nulp_logo_ukr.jpg"
+          type="image/jpg">
     <script src="scripts/jquery.min.js" type="text/javascript"></script>
     <script src="scripts/bootstrap.min.js" type="text/javascript"></script>
-    <script src="scripts/default.js" type="text/javascript"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <script  type="text/javascript"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
     <!-- Optional theme -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
+          integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
     <!-- Latest compiled and minified JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+            integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+            crossorigin="anonymous"></script>
 
 </head>
 
@@ -28,11 +33,7 @@
 
 
 <div class="header_container">
-
-    <div class="padding_top" >
-        <div class="fl_left">
-            <img class="logo" src="img/logo.png">
-        </div>
+    <div class="header_container">
         <nav class="navbar navbar-inverse navbar-fixed-top">
             <div class="container">
                 <div class="navbar-header">
@@ -69,57 +70,64 @@
                         <li class="nav-item">
                             <a class="nav-link" href="Admin.html">Адмін</a>
                         </li>
+                    </ul>
                 </div>
             </div>
         </nav>
+        <div class="block-with-containers container">
 
-        <div class="bottom_text fl_right">
-            <p>ЗНАХОДЬТЕ НАС ОНЛАЙН</p>
-            <p><a href=""> <img src="img/nav_img1.png"> </a></p>
-            <p><a href=""> <img src="img/nav_img2.png"> </a></p>
-            <p><a href=""> <img src="img/nav_img3.png"> </a></p>
-            <p><a href=""> <img src="img/nav_img4.png"> </a></p>
-            <p><a href=""> <img src="img/nav_img5.png"> </a></p>
+            <div>
+                <img class="logo" src="img/logo.png">
+            </div>
+
+
+            <div class="bottom_text ">
+                <p>ЗНАХОДЬТЕ НАС ОНЛАЙН</p>
+                <p><a href=""> <img src="img/nav_img1.png"> </a></p>
+                <p><a href=""> <img src="img/nav_img2.png"> </a></p>
+                <p><a href=""> <img src="img/nav_img3.png"> </a></p>
+                <p><a href=""> <img src="img/nav_img4.png"> </a></p>
+            </div>
+
         </div>
         <div class="clear_both"></div>
     </div>
-    <div class = container>
+    <div class=container>
+        <p id="success-msg" class="success-msg">Новину успішно опубліковано</p>
         <center><h1>Додати новину</h1></center>
         <br>
-        <div class="row">
-            <div class="col">
-                <div class="form-group">
-                    <input type="file" class="form-control-file" id="exampleInputFile" aria-describedby="fileHelp">
-                    <small id="fileHelp" class="form-text text-muted">Вибрати фото статті.</small>
-                </div>
-                <img src="map.png" alt = "your photo" class="img-fluid">
-                <br>
-            </div>
-            <div class="col">
-                <div class="form-group">
-                    <input class="form-control" type="text" id="example-text-input" placeholder="Заголовок...">
+        <form onsubmit="event.preventDefault(); addNews()">
+            <div class="row">
+                <div class="col">
+                    <div class="form-group">
+                        <input type="file" class="form-control-file" id="exampleInputFile" aria-describedby="fileHelp">
+                        <small id="fileHelp" class="form-text text-muted">Вибрати фото статті.</small>
+                    </div>
+                    <img src="map.png" alt="your photo" class="img-fluid">
                     <br>
-                    <textarea class="form-control" rows="3" id="exampleTextarea" placeholder="Короткий опис статті..."></textarea>
-                    <br>
-                    <textarea class="form-control" rows="6" id="exampleTextarea" placeholder="Стаття..."></textarea>
                 </div>
-                <button class="btn btn-primary float-right" type="submit">Відправити</button>
+                <div class="col row1">
+                    <div class="form-group">
+                        <input class="form-control" type="text" id="article" placeholder="Заголовок..." required>
+                        <br>
+                        <textarea class="form-control" rows="3" id="descripition"
+                                  placeholder="Короткий опис статті..." required></textarea>
+                        <br>
+                        <textarea class="form-control" rows="6" id="title" placeholder="Стаття..." required></textarea>
+                    </div>
+                    <button class="btn btn-primary float-right" type="submit">Відправити</button>
+                </div>
             </div>
-        </div>
+        </form>
     </div>
-
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
-
-
+</div>
 </body>
 
 <footer>
     <div class="bottom_information">
-        <span>Copyright 2017 by Sergiy Borusenko. All Rights Reserved.</span>
+        <span>Copyright 2017 by Sergiy Borysenko. All Rights Reserved.</span>
         <div>
-            <ul >
+            <ul>
                 <li><a href="index.html">Головна</a></li>
                 <li><a href="newspage.html">Новини</a></li>
                 <li><a href="comments.html">Студентам</a></li>
@@ -130,4 +138,5 @@
         </div>
     </div>
 </footer>
+<script type="text/javascript" src="scripts/main.js"></script>
 </html>
