--- a/lab_2/comments.html
+++ b/lab_2/comments.html
@@ -29,10 +29,7 @@
 
 <div class="header_container">
 
-    <div class="padding_top" >
-        <div class="fl_left">
-            <img class="logo" src="img/logo.png">
-        </div>
+    <div class="header_container">
         <nav class="navbar navbar-inverse navbar-fixed-top">
             <div class="container">
                 <div class="navbar-header">
@@ -69,25 +66,30 @@
                         <li class="nav-item">
                             <a class="nav-link" href="Admin.html">Адмін</a>
                         </li>
+                    </ul>
                 </div>
             </div>
         </nav>
+        <div class="block-with-containers container">
 
-        <div class="bottom_text fl_right">
-            <p>ЗНАХОДЬТЕ НАС ОНЛАЙН</p>
-            <p><a href=""> <img src="img/nav_img1.png"> </a></p>
-            <p><a href=""> <img src="img/nav_img2.png"> </a></p>
-            <p><a href=""> <img src="img/nav_img3.png"> </a></p>
-            <p><a href=""> <img src="img/nav_img4.png"> </a></p>
-            <p><a href=""> <img src="img/nav_img5.png"> </a></p>
+            <div>
+                <img class="logo" src="img/logo.png">
+            </div>
+
+
+            <div class="bottom_text ">
+                <p>ЗНАХОДЬТЕ НАС ОНЛАЙН</p>
+                <p><a href=""> <img src="img/nav_img1.png"> </a></p>
+                <p><a href=""> <img src="img/nav_img2.png"> </a></p>
+                <p><a href=""> <img src="img/nav_img3.png"> </a></p>
+                <p><a href=""> <img src="img/nav_img4.png"> </a></p>
+            </div>
+
         </div>
-        <div class="clear_both"></div>
-    </div>
 
-    <img src="c2.jpg">
-    <div class = container>
+    <div class = "container coll" id="feedbacksWrap">
         <div class="row">
-            <div class = col-lg>
+            <div >
                 <p>
                     <span class="h2 pull-left" style="margin-bottom: 20px;">Ігор Іванків</span></span>
                     <span><i>11.11.2017, 14:00</i></span>
@@ -99,7 +101,7 @@
         </div>
         <hr>
         <div class="row">
-            <div class = col-lg>
+            <div>
                 <p>
                     <span class="h2 pull-left" style="margin-bottom: 20px;">Вася Іванків</span></span>
                     <span><i>11.11.2017, 14:00</i></span>
@@ -110,28 +112,28 @@
             </div>
         </div>
         <hr>
-        <div class="row">
+    </div>
+    <div class="row1">
             <div class = "col-lg">
                 <div class="form-group">
-                    <textarea class="form-control" rows="5" id="comment" placeholder = "Новий відгук..."></textarea>
+                    <textarea class="form-control" rows="5" id="feedback" placeholder = "Новий відгук..."></textarea>
                 </div>
-                <button class="btn btn-primary float-right" type="submit">Відправити</button>
+                <button class="btn  float-right" type="submit" onclick="addComment()">Відправити</button>
             </div>
         </div>
-    </div>
 
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
-
-
+    <script src="scripts/main.js"></script>
+</div>
 </body>
 
 <footer>
-    <div class="bottom_information">
+    <div class="bottom_information ">
         <span>Copyright 2017 by Sergiy Borusenko. All Rights Reserved.</span>
-        <div>
-            <ul >
+        <div >
+            <ul class="bottom_nav" >
                 <li><a href="index.html">Головна</a></li>
                 <li><a href="newspage.html">Новини</a></li>
                 <li><a href="comments.html">Студентам</a></li>
