--- a/lab_2/contactss.html
+++ b/lab_2/contactss.html
@@ -28,63 +28,63 @@
 
 
 <div class="header_container">
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#"></a>
+            </div>
+            <div class="navbar-collapse collapse">
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Головна</a>
+                    </li>
+                    <li class="nav-item ">
+                        <a class="nav-link" href="newspage.html">Новини</a>
+                    </li>
+                    <li class="nav-item drop-down">
+                        <a href="">Студентам</a>
+                        <ul>
+                            <li><a href="programm.html">Програма</a></li>
+                            <li><a href="labs.html">Лабораторні</a></li>
+                            <li><a href="lit.html">Література</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="comments.html">Відгуки</a>
+                    </li>
 
-    <div class="padding_top" >
-        <div class="fl_left">
+                    <li class="nav-item">
+                        <a class="nav-link" href="contactss.html">Контакти</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="Admin.html">Адмін</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <div class="block-with-containers container">
+
+        <div>
             <img class="logo" src="img/logo.png">
         </div>
-        <nav class="navbar navbar-inverse navbar-fixed-top">
-            <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="#"></a>
-                </div>
-                <div class="navbar-collapse collapse">
-                    <ul class="nav navbar-nav navbar-right">
-                        <li class="nav-item">
-                            <a class="nav-link" href="index.html">Головна</a>
-                        </li>
-                        <li class="nav-item ">
-                            <a class="nav-link" href="newspage.html">Новини</a>
-                        </li>
-                        <li class="nav-item drop-down">
-                            <a href="">Студентам</a>
-                            <ul>
-                                <li><a href="programm.html">Програма</a></li>
-                                <li><a href="labs.html">Лабораторні</a></li>
-                                <li><a href="lit.html">Література</a></li>
-                            </ul>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="comments.html">Відгуки</a>
-                        </li>
 
-                        <li class="nav-item">
-                            <a class="nav-link" href="contactss.html">Контакти</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="Admin.html">Адмін</a>
-                        </li>
-                </div>
-            </div>
-        </nav>
 
-        <div class="bottom_text fl_right">
+        <div class="bottom_text ">
             <p>ЗНАХОДЬТЕ НАС ОНЛАЙН</p>
             <p><a href=""> <img src="img/nav_img1.png"> </a></p>
             <p><a href=""> <img src="img/nav_img2.png"> </a></p>
             <p><a href=""> <img src="img/nav_img3.png"> </a></p>
             <p><a href=""> <img src="img/nav_img4.png"> </a></p>
-            <p><a href=""> <img src="img/nav_img5.png"> </a></p>
         </div>
-        <div class="clear_both"></div>
+
     </div>
 
-    <img src="c2.jpg">
     <div>
         <h2 style="text-align: center">Контакти</h2>
         <p>Директор: Курдуплик  К.Р.<br>
@@ -94,16 +94,13 @@
     </div>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2573.4048839096304!2d24.00869031517184!3d49.834849439410874!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x473add7914dc0cb9%3A0x91a22eece426806!2z0LLRg9C70LjRhtGPINCh0YLQtdC_0LDQvdCwINCR0LDQvdC00LXRgNC4LCAyMiwg0JvRjNCy0ZbQsiwg0JvRjNCy0ZbQstGB0YzQutCwINC-0LHQu9Cw0YHRgtGM!5e0!3m2!1suk!2sua!4v1507803970795" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
 
-
+</div>
 </body>
 
 <footer>
     <div class="bottom_information">
-        <span>Copyright 2017 by Sergiy Borusenko. All Rights Reserved.</span>
+        <span>Copyright 2017 by Sergiy Borysenko. All Rights Reserved.</span>
         <div>
             <ul >
                 <li><a href="index.html">Головна</a></li>
