--- a/lab_2/index.html
+++ b/lab_2/index.html
@@ -1,170 +1,180 @@
 <!doctype html>
 <html manifest="manifest.cache">
-<html xmlns="" xmlns="http://www.w3.org/1999/html"> <!--&&&-->
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta name="viewport">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="styles/rstyles.css">
 
     <title>Лабка</title>
-    <link rel="shortcut icon" href="https://upload.wikimedia.org/wikipedia/commons/thumb/d/de/Nulp_logo_ukr.jpg/809px-Nulp_logo_ukr.jpg" type="image/jpg">
-
+    <link rel="shortcut icon"
+          href="https://upload.wikimedia.org/wikipedia/commons/thumb/d/de/Nulp_logo_ukr.jpg/809px-Nulp_logo_ukr.jpg"
+          type="image/jpg">
+    <script src="scripts/main.js"></script>
     <script src="scripts/jquery.min.js" type="text/javascript"></script>
     <script src="scripts/bootstrap.min.js" type="text/javascript"></script>
-    <script src="scripts/default.js" type="text/javascript"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <!-- Optional theme -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
+          integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
     <!-- Latest compiled and minified JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+            integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+            crossorigin="anonymous"></script>
 </head>
 
 <body>
-
-
-    <div class="header_container">
-
-        <div class="padding_top" >
-            <div class="fl_left">
-                <img class="logo" src="img/logo.png">
+<div class="header_container">
+    <nav class="navbar navbar-inverse navbar-fixed-top"  id="header">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#"></a>
             </div>
-            <nav class="navbar navbar-inverse navbar-fixed-top">
-                <div class="container">
-                    <div class="navbar-header">
-                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                        </button>
-                        <a class="navbar-brand" href="#"></a>
-                    </div>
-                    <div class="navbar-collapse collapse">
-                        <ul class="nav navbar-nav navbar-right">
-                            <li class="nav-item">
-                                <a class="nav-link" href="index.html">Головна</a>
-                            </li>
-                            <li class="nav-item ">
-                                <a class="nav-link" href="newspage.html">Новини</a>
-                            </li>
-                            <li class="nav-item drop-down">
-                                <a href="">Студентам</a>
-                                <ul>
-                                    <li><a href="programm.html">Програма</a></li>
-                                    <li><a href="labs.html">Лабораторні</a></li>
-                                    <li><a href="lit.html">Література</a></li>
-                                </ul>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="comments.html">Відгуки</a>
-                            </li>
+            <div class="navbar-collapse collapse">
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Головна</a>
+                    </li>
+                    <li class="nav-item ">
+                        <a class="nav-link" href="newspage.html">Новини</a>
+                    </li>
+                    <li class="nav-item drop-down">
+                        <a href="">Студентам</a>
+                        <ul>
+                            <li><a href="programm.html">Програма</a></li>
+                            <li><a href="labs.html">Лабораторні</a></li>
+                            <li><a href="lit.html">Література</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="comments.html">Відгуки</a>
+                    </li>
 
-                            <li class="nav-item">
-                                <a class="nav-link" href="contactss.html">Контакти</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="Admin.html">Адмін</a>
-                            </li>
-                    </div>
-                </div>
-            </nav>
-
-            <div class="bottom_text fl_right">
-                <p>ЗНАХОДЬТЕ НАС ОНЛАЙН</p>
-                <p><a href=""> <img src="img/nav_img1.png"> </a></p>
-                <p><a href=""> <img src="img/nav_img2.png"> </a></p>
-                <p><a href=""> <img src="img/nav_img3.png"> </a></p>
-                <p><a href=""> <img src="img/nav_img4.png"> </a></p>
-                <p><a href=""> <img src="img/nav_img5.png"> </a></p>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contactss.html">Контакти</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="Admin.html">Адмін</a>
+                    </li>
+                </ul>
             </div>
-            <div class="clear_both"></div>
+        </div>
+    </nav>
+    <div class="block-with-containers container">
+
+        <div>
+            <img class="logo" src="img/logo.png">
         </div>
 
-            <div class="card h-100 col-lg-12 col-sm-12 ">
-                <hr class="visible-xs" style="margin-top: 50px;">
-                <div>
-                    <h1 class="text1">Суб’єкти господарської діяльності <br> </h1>
-                    <p class="text">
-                        <b>Мета:</b>опанування теоретичних та практичних проблем правовідносин, що
-                        виникають у зв’язку із створенням, діяльністю та припиненням суб’єктів
-                        господарювання в Україні, а також вивчення теоретичних положень та вироблення
-                        навичок практичного застосування знань і норм чинного законодавства у цій сфері..</p>
-                    <p><b>Предмет:</b> господарське законодавство, яке регулює відносини щодо заснування та
-                        припинення суб’єктів господарювання, а також здійснення ними господарської
-                        діяльності.</p>
-                    <p><b>Зміст:</b> Правовий статус суб’єктів господарської діяльності в Україні. Поняття
-                        підприємств та їх правовий статус за законодавством України. Особливості
-                        створення та діяльності окремих видів підприємств. Державні та комунальні
-                        унітарні підприємства. Правова характеристика господарських товариств.
-                        Акціонерні товариства. Правовий статус товариств з обмеженою та додатковою
-                        відповідальністю. Повні та командитні товариства. Підприємства колективної
-                        власності. Об’єднання підприємств. Особливості правового статусу інших суб’єктів
-                        господарювання.</p>
-                    <p><b>Місце у навчальному процесі</b> – обов’язкова, 2 семестр.<b>«Суб’єкти господарської діяльності »</b> здобувач вищої освіти повинен:
-                    <p><b>Знати:</b></p>
-                    </p>
-                    <ul style="margin-left: 40px;">
-                        <li>джерела правового регулювання порядку створення, діяльності та припинення
-                            суб’єктів господарювання в Україні;
-                        </li>
-                        <li>особливості правового статусу окремих
-                            суб’єктів господарської діяльності;</li>
-                        <li>правові підстави, порядок та процедуру
-                            створення та припинення суб’єктів господарської діяльності;</li>
-                    </ul>
 
-
-                    <p><b>Вміти: </b></p>
-
-                    <ul style=" margin-left: 40px;">
-                        <li>правильно застосовувати законодавство, що регулює правовий статус суб’єктів
-                            господарської діяльності;
-                        </li>
-                        <li>складати проекти установчих документів суб’єктів
-                            господарської діяльності, а також окремих процесуальних документів; аналізувати
-                            практичні казуси.</li>
-                    </ul>
-
-                </div>
-                </hr>
-            </div>
-
-        <h1 class="title">Новини</h1>
-        	<div class="news">
-        		<div class="article">
-        			<img src="img/img.png">
-        			<h3>Заголовок</h3>
-        			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis atque qui nobis quis doloribus minima, incidunt magni excepturi quos blanditiis, quisquam, sequi libero voluptatibus perferendis cum dolores ut doloremque. Blanditiis.</p>
-        		</div>
-        		<div class="article">
-        			<img src="img/img.png" alt="">
-        			<h3>Заголовок</h3>
-        			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis, commodi, et ipsum ex illo repellendus nihil aliquam ratione eveniet quisquam! Placeat voluptates facilis natus totam ullam harum. Qui, voluptate, aut.</p>
-        		</div>
-        		<div class="article">
-        			<img src="img/img.png">
-        			<h3>Заголовок</h3>
-        			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi sunt velit laboriosam quibusdam corrupti libero a, animi! Voluptatum esse, fugit, voluptate, atque architecto deserunt impedit nostrum, neque quisquam explicabo exercitationem!</p>
-        		</div>
-        	</div>
+        <div class="bottom_text ">
+            <p>ЗНАХОДЬТЕ НАС ОНЛАЙН</p>
+            <p><a href=""> <img src="img/nav_img1.png"> </a></p>
+            <p><a href=""> <img src="img/nav_img2.png"> </a></p>
+            <p><a href=""> <img src="img/nav_img3.png"> </a></p>
+            <p><a href=""> <img src="img/nav_img4.png"> </a></p>
         </div>
 
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+    </div>
+
+    <div class="card h-100 col-lg-12 col-sm-12 ">
+        <hr class="visible-xs" style="margin-top: 50px;">
+        <div>
+            <h1 class="text1">Суб’єкти господарської діяльності <br></h1>
+            <p class="text">
+                <b>Мета:</b>опанування теоретичних та практичних проблем правовідносин, що
+                виникають у зв’язку із створенням, діяльністю та припиненням суб’єктів
+                господарювання в Україні, а також вивчення теоретичних положень та вироблення
+                навичок практичного застосування знань і норм чинного законодавства у цій сфері..</p>
+            <p><b>Предмет:</b> господарське законодавство, яке регулює відносини щодо заснування та
+                припинення суб’єктів господарювання, а також здійснення ними господарської
+                діяльності.</p>
+            <p><b>Зміст:</b> Правовий статус суб’єктів господарської діяльності в Україні. Поняття
+                підприємств та їх правовий статус за законодавством України. Особливості
+                створення та діяльності окремих видів підприємств. Державні та комунальні
+                унітарні підприємства. Правова характеристика господарських товариств.
+                Акціонерні товариства. Правовий статус товариств з обмеженою та додатковою
+                відповідальністю. Повні та командитні товариства. Підприємства колективної
+                власності. Об’єднання підприємств. Особливості правового статусу інших суб’єктів
+                господарювання.</p>
+            <p><b>Місце у навчальному процесі</b> – обов’язкова, 2 семестр.<b>«Суб’єкти господарської діяльності »</b>
+                здобувач вищої освіти повинен:
+            <p><b>Знати:</b></p>
+
+            <ul style="margin-left: 40px;">
+                <li>джерела правового регулювання порядку створення, діяльності та припинення
+                    суб’єктів господарювання в Україні;
+                </li>
+                <li>особливості правового статусу окремих
+                    суб’єктів господарської діяльності;
+                </li>
+                <li>правові підстави, порядок та процедуру
+                    створення та припинення суб’єктів господарської діяльності;
+                </li>
+            </ul>
+
+
+            <p><b>Вміти: </b></p>
+
+            <ul style=" margin-left: 40px;">
+                <li>правильно застосовувати законодавство, що регулює правовий статус суб’єктів
+                    господарської діяльності;
+                </li>
+                <li>складати проекти установчих документів суб’єктів
+                    господарської діяльності, а також окремих процесуальних документів; аналізувати
+                    практичні казуси.
+                </li>
+            </ul>
+
+        </div>
+    </div>
+
+    <h1 class="title">Новини</h1>
+    <div class="content_wrapper">
+        <div class="row" id="news_container">
+            <div class="col-md-4 news_table centered" data-newsdivid="newId_0">
+                <a href="#" class="thumbnail">
+                    <img src="img/news_image_1.jpg">
+                    <div class="caption">
+                        <p>Одна з провідних інноваційних компаній України «С-інжиніринг» запрошує НУ "ЛП" до співпраці</p>
+                    </div>
+                </a>
+            </div>
+            <div class="col-md-4 news_table centered" data-newsdivid="newId_1">
+                <a href="#" class="thumbnail">
+                    <img src="img/news_image_2.jpg">
+                    <div class="caption">
+                        <p>Професор Ягеллонського університету Яцек Пурхля – доктор Honoris Causa Львівської політехніки</p>
+                    </div>
+                </a>
+            </div>
+            <div class="col-md-4 news_table centered" data-newsdivid="newId_2">
+                <a href="#" class="thumbnail">
+                    <img src="img/news_image_3.jpg">
+                    <div class="caption">
+                        <p>У Львівській політехніці відбулося щорічне зібрання членів Наукового товариства імені Тараса Шевченка</p>
+                    </div>
+                </a>
+            </div>
+        </div>
+    </div>
+</div>
+
 
 
 </body>
 
 <footer>
     <div class="bottom_information">
-        <span>Copyright 2017 by Sergiy Borusenko. All Rights Reserved.</span>
+        <span>Copyright 2017 by Sergiy Borysenko. All Rights Reserved.</span>
         <div>
-            <ul >
+            <ul>
                 <li><a href="index.html">Головна</a></li>
                 <li><a href="newspage.html">Новини</a></li>
                 <li><a href="comments.html">Студентам</a></li>
@@ -175,5 +185,4 @@
         </div>
     </div>
 </footer>
-</body>
 </html>
