--- a/lab_2/newspage.html
+++ b/lab_2/newspage.html
@@ -9,126 +9,142 @@
     <link rel="stylesheet" type="text/css" href="styles/rstyles.css">
 
     <title>Контакти</title>
-    <link rel="shortcut icon" href="https://upload.wikimedia.org/wikipedia/commons/thumb/d/de/Nulp_logo_ukr.jpg/809px-Nulp_logo_ukr.jpg" type="image/jpg">
+    <link rel="shortcut icon"
+          href="https://upload.wikimedia.org/wikipedia/commons/thumb/d/de/Nulp_logo_ukr.jpg/809px-Nulp_logo_ukr.jpg"
+          type="image/jpg">
 
     <script src="scripts/jquery.min.js" type="text/javascript"></script>
     <script src="scripts/bootstrap.min.js" type="text/javascript"></script>
     <script src="scripts/default.js" type="text/javascript"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
     <!-- Optional theme -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
+          integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
     <!-- Latest compiled and minified JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+            integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+            crossorigin="anonymous"></script>
 
 </head>
 
 <body>
 
 
+<
 <div class="header_container">
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#"></a>
+            </div>
+            <div class="navbar-collapse collapse">
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Головна</a>
+                    </li>
+                    <li class="nav-item ">
+                        <a class="nav-link" href="newspage.html">Новини</a>
+                    </li>
+                    <li class="nav-item drop-down">
+                        <a href="">Студентам</a>
+                        <ul>
+                            <li><a href="programm.html">Програма</a></li>
+                            <li><a href="labs.html">Лабораторні</a></li>
+                            <li><a href="lit.html">Література</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="comments.html">Відгуки</a>
+                    </li>
 
-    <div class="padding_top" >
-        <div class="fl_left">
-            <img class="logo" src="img/logo.png">
+                    <li class="nav-item">
+                        <a class="nav-link" href="contactss.html">Контакти</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="Admin.html">Адмін</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-        <nav class="navbar navbar-inverse navbar-fixed-top">
-            <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="#"></a>
-                </div>
-                <div class="navbar-collapse collapse">
-                    <ul class="nav navbar-nav navbar-right">
-                        <li class="nav-item">
-                            <a class="nav-link" href="index.html">Головна</a>
-                        </li>
-                        <li class="nav-item ">
-                            <a class="nav-link" href="newspage.html">Новини</a>
-                        </li>
-                        <li class="nav-item drop-down">
-                            <a href="">Студентам</a>
-                            <ul>
-                                <li><a href="programm.html">Програма</a></li>
-                                <li><a href="labs.html">Лабораторні</a></li>
-                                <li><a href="lit.html">Література</a></li>
-                            </ul>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="comments.html">Відгуки</a>
-                        </li>
+    </nav>
+    <div id="news">
+        <div class="block-with-containers container">
 
-                        <li class="nav-item">
-                            <a class="nav-link" href="contactss.html">Контакти</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="Admin.html">Адмін</a>
-                        </li>
+            <div>
+                <img class="logo" src="img/logo.png">
+            </div>
+
+
+            <div class="bottom_text ">
+                <p>ЗНАХОДЬТЕ НАС ОНЛАЙН</p>
+                <p><a href=""> <img src="img/nav_img1.png"> </a></p>
+                <p><a href=""> <img src="img/nav_img2.png"> </a></p>
+                <p><a href=""> <img src="img/nav_img3.png"> </a></p>
+                <p><a href=""> <img src="img/nav_img4.png"> </a></p>
+            </div>
+
+        </div>
+        <div>
+            <h1 class=" visible-xs" id="title"> Новини</h1>
+            <hr>
+
+
+            <div class="content news_page" >
+                <div class="content_wrapper">
+                    <h1 class="centered news_page_news_title">Новини:</h1>
+                    <div class="row" id="news_container">
+                        <div class="col-md-4 news_table centered" data-newsdivid="newId_0">
+                            <a href="#" class="thumbnail">
+                                <img src="img/news_image_1.jpg">
+                                <div class="caption">
+                                    <h3>Заголовок</h3>
+                                    <p>Одна з провідних інноваційних компаній України «С-інжиніринг» запрошує НУ "ЛП" до
+                                        співпраці</p>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col-md-4 news_table centered" data-newsdivid="newId_1">
+                            <a href="#" class="thumbnail">
+                                <img src="img/news_image_2.jpg">
+                                <div class="caption">
+                                    <h3>Заголовок</h3>
+
+                                    <p>Професор Ягеллонського університету Яцек Пурхля – доктор Honoris Causa Львівської
+                                        політехніки</p>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col-md-4 news_table centered" data-newsdivid="newId_2">
+                            <a href="#" class="thumbnail">
+                                <img src="img/news_image_3.jpg">
+                                <div class="caption">
+                                    <h3>Заголовок</h3>
+                                    <p>У Львівській політехніці відбулося щорічне зібрання членів Наукового товариства імені
+                                        Тараса Шевченка</p>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </nav>
-
-        <div class="bottom_text fl_right">
-            <p>ЗНАХОДЬТЕ НАС ОНЛАЙН</p>
-            <p><a href=""> <img src="img/nav_img1.png"> </a></p>
-            <p><a href=""> <img src="img/nav_img2.png"> </a></p>
-            <p><a href=""> <img src="img/nav_img3.png"> </a></p>
-            <p><a href=""> <img src="img/nav_img4.png"> </a></p>
-            <p><a href=""> <img src="img/nav_img5.png"> </a></p>
         </div>
-        <div class="clear_both"></div>
     </div>
-
-
-    <div>
-        <h1 class="text1 visible-xs"> Новини</h1>
-        <hr>
-
-
-        <div class="content news_page">
-            <div class="content_wrapper">
-                <h1 class="centered news_page_news_title">Новини:</h1>
-                <div class="row" id="news_container">
-                    <div class="col-md-4 news_table centered" data-newsdivid="newId_0">
-                        <a href="#" class="thumbnail">
-                            <img src="img/news_image_1.jpg">
-                            <div class="caption">
-                                <p>Одна з провідних інноваційних компаній України «С-інжиніринг» запрошує НУ "ЛП" до співпраці</p>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="col-md-4 news_table centered" data-newsdivid="newId_1">
-                        <a href="#" class="thumbnail">
-                            <img src="img/news_image_2.jpg">
-                            <div class="caption">
-                                <p>Професор Ягеллонського університету Яцек Пурхля – доктор Honoris Causa Львівської політехніки</p>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="col-md-4 news_table centered" data-newsdivid="newId_2">
-                        <a href="#" class="thumbnail">
-                            <img src="img/news_image_3.jpg">
-                            <div class="caption">
-                                <p>У Львівській політехніці відбулося щорічне зібрання членів Наукового товариства імені Тараса Шевченка</p>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-
+</div>
 </body>
 
 <footer>
     <div class="bottom_information">
         <span>Copyright 2017 by Sergiy Borusenko. All Rights Reserved.</span>
         <div>
-            <ul >
+            <ul>
                 <li><a href="index.html">Головна</a></li>
                 <li><a href="newspage.html">Новини</a></li>
                 <li><a href="comments.html">Студентам</a></li>
@@ -139,4 +155,5 @@
         </div>
     </div>
 </footer>
+<script type="text/javascript" src="scripts/main.js"></script>
 </html>
